deploy/ui/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: res-edge
spec:
  type: LoadBalancer
  selector:
    app: ui
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8088
