deploy/ui/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: api
spec:
  type: NodePort
  selector:
    app: ui
  ports:
    - name: http
      protocol: TCP
      port: 8088
      nodePort: 30080
      targetPort: 8088
